<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/defaultValue"
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_name" />

    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/defaultValue"
        android:capitalize="words"
        android:inputType="number"
        android:numeric="integer"
        android:key="height"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_height" />

    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/defaultValue"
        android:capitalize="words"
        android:inputType="number"
        android:numeric="integer"
        android:key="age"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_age" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="@string/defaultValue"
        android:entries="@array/pref_gender_values"
        android:entryValues="@array/pref_gender_values"
        android:key="gender"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_gender" />

</PreferenceScreen>
